--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,11 +5,5 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "dotenv>=0.9.9",
-    "fastapi>=0.122.0",
-    "google-genai>=1.52.0",
-    "httpx>=0.28.1",
-    "pipreqs>=0.5.0",
-    "playwright>=1.56.0",
-    "uvicorn>=0.38.0",
+    "requests>=2.32.5",
 ]
